@@ -7,6 +7,7 @@ import java.util.Map;
 /**
  * Created by 11256 on 2018/9/12.
  * 堆内存溢出
+ * 使用Java工具jmap分析堆内存溢出
  */
 public class HeapOutOfMemoryError {
 
@@ -15,10 +16,10 @@ public class HeapOutOfMemoryError {
     }
 
     /**
-     * verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails
+     * -Xms20M -Xmx20M -XX:+HeapDumpOnOutOfMemoryError
      */
     private static void test(){
-        Map<String, Student> map = new HashMap<>();
+        Map<String, Student> map = new HashMap<>( );
         Object[] array = new Object[500000];
         for (int i = 0; i < array.length; i++){
             Student s = new Student("test" + i, 100);
